switch the documentation files to use row instead of column

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     width:100%;
                 }
 
-                .highlights .col {
+                .highlights .row {
                     width:50%!important;
                 }
             }
@@ -99,7 +99,7 @@
                     display:inline-block !important;
                 }
 
-                .highlights .col {
+                .highlights .row {
                     width:100%!important;
                 }
             }
@@ -116,8 +116,8 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col sizefill sitemenu">
-                        <div class="col sizefill mobile-sizefill">
+                    <div class="row sizefill sitemenu">
+                        <div class="row sizefill mobile-sizefill">
                             <div class="cell">
                                 <ul class="nav ">
                                     <li><a href="grid.html">Grid</a></li>
@@ -140,8 +140,8 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col sizefill sitemenu">
-                        <div class="col sizefill mobile-sizefill">
+                    <div class="row sizefill sitemenu">
+                        <div class="row sizefill mobile-sizefill">
                             <div class="cell">
                                 <ul class="nav ">
                                     <li><a href="grid.html">Grid</a></li>
@@ -159,12 +159,12 @@
         <div class="masthead">
             <div class="site-center">
                 <div class="cell">
-                    <div class="col sizefit">
+                    <div class="row sizefit">
                         <div class="cell">
                             <div class="logo-masthead"></div>
                         </div>
                     </div>
-                    <div class="col sizefill">
+                    <div class="row sizefill">
                         <div class="cell">
                             <div class="center slogan">
                                 <div class="cell">
@@ -179,7 +179,7 @@
         </div>
         <div class="site-body">
             <div class="site-center highlights">
-                <div class="col size1of4">
+                <div class="row size1of4">
                     <div class="cell">
                         <h2><span class="center icon icon-gift icon-64"></span>Feature Rich</h2>
                         <p>
@@ -187,7 +187,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col size1of4">
+                <div class="row size1of4">
                     <div class="cell">
                         <h2><span class="center icon icon-globe icon-64"></span>Universal</h2>
                         <p>
@@ -195,7 +195,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col size1of4">
+                <div class="row size1of4">
                     <div class="cell">
                         <h2><span class="center icon icon-check icon-64"></span>Flexible</h2>
                         <p>
@@ -203,7 +203,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col sizefill">
+                <div class="row sizefill">
                     <div class="cell">
                         <h2><span class="center icon icon-cogs icon-64"></span>Modular</h2>
                         <p>
@@ -216,7 +216,7 @@
 
         <div class="site-body">
             <div class="site-center">
-                <div class="col">
+                <div class="row">
                     <div class="cell">
                         <h2>Different from other CSS frameworks</h2>
                         <p>Although the overall look and feel are most definitely inspired by Twitter Bootstrap, Cascade framework is not just another Bootstrap clone.
@@ -232,7 +232,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="row">
                     <div class="cell">
                         <h2>Cascade Modules</h2>
                         <p>The following table gives an overview of the available Cascade modules.</p>
@@ -335,7 +335,7 @@
                         </table>
                     </div>
                 </div>
-                <div class="col">
+                <div class="row">
                     <div class="cell">
                         <h2>Builds</h2>
                         <p>Cascade Framework provides you with 4 custom builds, that combine different modules into a single file.</p>
@@ -378,7 +378,7 @@
                         </table>
                     </div>
                 </div>
-                <div class="col">
+                <div class="row">
                     <div class="cell">
                         <h2>More info?</h2>
                         <p>Check out <a href="grid.html">the documentation</a> for an overview and demos of the Cascade Framework's features.</p>
@@ -393,7 +393,7 @@
                         <a href="https://twitter.com/cascadecss"><span class="icon icon-32 icon-twitter"></span></a>
                         <a href="http://www.facebook.com/cascadeframework"><span class="icon icon-32 icon-facebook-sign"></span></a>
                         <a href="https://github.com/CascadeFramework"><span class="icon icon-32 icon-github"></span></a>
-                        <div class="col">
+                        <div class="row">
                             &#169; 2013, <a href="https://twitter.com/johnslegers">John Slegers</a>
                         </div>
                     </div>
