--- a/template-fixed-header+centered-panel.html
+++ b/template-fixed-header+centered-panel.html
@@ -16,14 +16,14 @@
     <body class="documentation">
         <div class="site-header-fixture">
             <div class="site-header-ghost">
-                <div class="col sizefit mobile-sizefit">
+                <div class="row sizefit mobile-sizefit">
                     <div class="cell">
                         <a href="#" class="logo"></a>
                     </div>
                 </div>
-                <div class="col sizefill mobile-sizefill">
+                <div class="row sizefill mobile-sizefill">
                     <div class="cell">
-                        <ul class="col nav">
+                        <ul class="row nav">
                             <li class="active"><a href="#">Item one</a></li>
                             <li><a href="#">Item two</a></li>
                             <li><a href="#">Item three</a></li>
@@ -34,14 +34,14 @@
                 </div>
             </div>
             <div class="site-header">
-                <div class="col sizefit mobile-sizefit">
+                <div class="row sizefit mobile-sizefit">
                     <div class="cell">
                         <a href="#" class="logo"></a>
                     </div>
                 </div>
-                <div class="col sizefill mobile-sizefill">
+                <div class="row sizefill mobile-sizefill">
                     <div class="cell">
-                        <ul class="col nav">
+                        <ul class="row nav">
                             <li class="active"><a href="#">Item one</a></li>
                             <li><a href="#">Item two</a></li>
                             <li><a href="#">Item three</a></li>
@@ -57,14 +57,14 @@
             <div class="site-body panel">
                 <div class="body">
                     <div class="cell">
-                        <div class="col">
+                        <div class="row">
                             <div class="cell">
                                 <div class="page-header">
                                     <h1>Fixed header & centered panel</h1>
                                 </div>
                             </div>
                         </div>
-                        <div class="col size1of4">
+                        <div class="row size1of4">
                             <div class="cell menu">
                                 <span class="tiny">Test test</span>
                                 <ul class="left nav links">
@@ -76,13 +76,13 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col sizefill">
-                            <div class="col">
+                        <div class="row sizefill">
+                            <div class="row">
                                 <div class="cell">
                                     <div class="template-header">
                                         <h2>Lorem ipsum</h2>
                                     </div>
-                                    <div class="col leuven">
+                                    <div class="row leuven">
                                         <div class="cell panel">
                                             <div class="body">
                                                 <div class="cell">
@@ -109,17 +109,17 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <hr />
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <div class="template-header">
                                         <h2>Vestibulum ante</h2>
                                     </div>
-                                    <div class="col leuven">
+                                    <div class="row leuven">
                                         <div class="cell panel">
                                             <div class="body">
                                                 <div class="cell">
@@ -160,12 +160,12 @@
                 </div>
             </div>
             <div class="site-footer">
-                <div class="col sizefit">
+                <div class="row sizefit">
                     <div class="cell">
                         <a href="#" class="powered-by"></a>
                     </div>
                 </div>
-                <div class="col sizefill">
+                <div class="row sizefill">
                     <div class="cell pipes">
                         <ul class="nav">
                             <li id="active"><a href="#">Item one</a></li>
