--- a/templates.html
+++ b/templates.html
@@ -71,13 +71,13 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col sizefill sitemenu">
-                        <div class="col sizefit mobile-sizefit">
+                    <div class="row sizefill sitemenu">
+                        <div class="row sizefit mobile-sizefit">
                             <div class="cell">
                                 <a href="index.html" class="logo"></a>
                             </div>
                         </div>
-                        <div class="col sizefill mobile-sizefill">
+                        <div class="row sizefill mobile-sizefill">
                             <div class="cell">
                                 <ul class="nav">
                                     <li><a href="grid.html">Grid</a></li>
@@ -90,9 +90,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="row">
                     <div class="cell">
-                        <div class="col">
+                        <div class="row">
                             <div class="cell">
                                 <div class="page-header">
                                     <h1>Templates <small>documentation</small></h1>
@@ -107,8 +107,8 @@
 
 
 
-                        <div class="col tablet-size1of2">
-                            <div class="col size1of3">
+                        <div class="row tablet-size1of2">
+                            <div class="row size1of3">
                                 <a href="template-centered-content.html" target="_blank">
                                     <div class="cell panel">
                                         <div class="header">
@@ -124,7 +124,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="col size1of3">
+                            <div class="row size1of3">
                                 <a href="template-centered-page.html" target="_blank">
                                     <div class="cell panel">
                                         <div class="header">
@@ -140,7 +140,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="col sizefill">
+                            <div class="row sizefill">
                                 <a href="template-centered-panel-with-header.html" target="_blank">
                                     <div class="cell panel">
                                         <div class="header">
@@ -157,8 +157,8 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col tablet-sizefill">
-                            <div class="col size1of3">
+                        <div class="row tablet-sizefill">
+                            <div class="row size1of3">
                                 <a href="template-fixed-header+centered-content.html" target="_blank">
                                     <div class="cell panel">
                                         <div class="header">
@@ -174,7 +174,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="col size1of3">
+                            <div class="row size1of3">
                                 <a href="template-fixed-header+centered-panel.html" target="_blank">
                                     <div class="cell panel">
                                         <div class="header">
@@ -190,7 +190,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="col sizefill">
+                            <div class="row sizefill">
                                 <a href="template-fixed-header+fixed-footer+centered-content.html" target="_blank">
                                     <div class="cell panel">
                                         <div class="header">
@@ -224,7 +224,7 @@
                         <a href="https://twitter.com/cascadecss"><span class="icon icon-32 icon-twitter"></span></a>
                         <a href="http://www.facebook.com/cascadeframework"><span class="icon icon-32 icon-facebook-sign"></span></a>
                         <a href="https://github.com/CascadeFramework"><span class="icon icon-32 icon-github"></span></a>
-                        <div class="col">
+                        <div class="row">
                             &#169; 2013, <a href="https://twitter.com/johnslegers">John Slegers</a>
                         </div>
                     </div>
