--- a/typography-additional.html
+++ b/typography-additional.html
@@ -25,13 +25,13 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col sizefill sitemenu">
-                        <div class="col sizefit mobile-sizefit">
+                    <div class="row sizefill sitemenu">
+                        <div class="row sizefit mobile-sizefit">
                             <div class="cell">
                                 <a href="index.html" class="logo"></a>
                             </div>
                         </div>
-                        <div class="col sizefill mobile-sizefill">
+                        <div class="row sizefill mobile-sizefill">
                             <div class="cell">
                                 <ul class="nav">
                                     <li><a href="grid.html">Grid</a></li>
@@ -44,9 +44,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="row">
                     <div class="cell">
-                        <div class="col">
+                        <div class="row">
                             <div class="cell">
                                 <div class="page-header">
                                     <h1>Typography <small>documentation</small></h1>
@@ -55,7 +55,7 @@
                         </div>
 
 
-                        <div class="col size1of4">
+                        <div class="row size1of4">
                             <div class="cell menu">
                                 <span class="tiny">Typography types</span>
                                 <ul class="left nav links">
@@ -65,7 +65,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col sizefill">
+                        <div class="row sizefill">
 
 
 
@@ -79,17 +79,17 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Page header</h2>
                                     <p>Herebelow is an example of a page header</p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
-                                            <div class="col">
+                                            <div class="row">
                                                 <div class="cell">
                                                     <div class="page-header">
                                                         <h1>Page header <small>with subheader</small></h1>
@@ -114,17 +114,17 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Labels</h2>
                                     <p>Use the "label" class to create fancy labels.</p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
-                                            <div class="col">
+                                            <div class="row">
                                                 <div class="cell">
                                                     <span class="label">Warning</span> All your base are belong to us
                                                 </div>
@@ -137,17 +137,17 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Fatty</h2>
                                     <p>Use the "fatty" class to create markup that stands out among the rest. By default, it is bold and has a slightly larger font-size.</p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
-                                            <div class="col">
+                                            <div class="row">
                                                 <div class="cell">
                                                     You can use the <span class="fatty">"fatty"</span> class to make markup stand out more.
                                                 </div>
@@ -160,17 +160,17 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Tiny</h2>
                                     <p>Use the "tiny" class to do somewhat the opposite of the "Fatty" class.</p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
-                                            <div class="col">
+                                            <div class="row">
                                                 <div class="cell">
                                                     <span class="tiny">This is tiny text</span>
                                                 </div>
@@ -186,21 +186,21 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Color modifiers</h2>
                                     <p>Cascade framework supports 10 default colors for changing the background color or text color of an element. It is recommended, however, to use
                                         semantic classes to override default colors or to replace the default color scheme with your own.</p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
-                                            <div class="col">
+                                            <div class="row">
                                                 <div class="cell">
                                                     <form>
-                                                        <div class="col">
+                                                        <div class="row">
                                                             <div class="cell">
                                                                 <div class="button-group">
                                                                     <div class="button background-red">1</div>
@@ -216,7 +216,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col">
+                                                        <div class="row">
                                                             <div class="cell">
                                                                 <div class="label background-red">label 1</div><!--
                                                                 --><div class="label background-orange">label 2</div><!--
@@ -229,7 +229,7 @@
                                                                 --><div class="label background-black">label 9</div>
                                                             </div>
                                                         </div>
-                                                        <div class="col">
+                                                        <div class="row">
                                                             <div class="cell">
                                                                 <span class="icon icon-64 icon-rss background-orange"></span>
                                                                 <span class="icon icon-64 icon-heart color-red"></span>
@@ -239,7 +239,7 @@
                                                                 <span class="icon icon-64 icon-pinterest-sign color-red"></span>
                                                             </div>
                                                         </div>
-                                                        <div class="col">
+                                                        <div class="row">
                                                             <div class="cell">
                                                                 <span class="icon icon-32 icon-minus background-red"></span>
                                                                 <span class="icon icon-32 icon-plus background-green"></span>
@@ -251,14 +251,14 @@
                                                                 <span class="icon icon-32 icon-ok color-green"></span>
                                                             </div>
                                                         </div>
-                                                        <div class="col">
+                                                        <div class="row">
                                                             <div class="cell background-black">
                                                                 <span class="icon icon-64 icon-star color-yellow"></span>
                                                                 <span class="icon icon-64 icon-star color-yellow"></span>
                                                                 <span class="icon icon-64 icon-star-empty color-yellow"></span>
                                                             </div>
                                                         </div>
-                                                        <div class="col">
+                                                        <div class="row">
                                                             <div class="panel cell">
                                                                 <div class="header background-blue color-yellow">Header</div>
                                                                 <div class="body">
@@ -301,18 +301,18 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Gradient</h2>
                                     <p>Use the "gradient" class to add a basic cross-browser gradient.</p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
-                                        <div class="col">
+                                        <div class="row">
                                             <div class="cell">
-                                                <div class="col">
+                                                <div class="row">
                                                     <div class="cell">
                                                         <span class="button-group">
                                                             <a class="gradient button icon-button" href="#"><span class="icon icon-italic"></span></a>
@@ -322,7 +322,7 @@
                                                         </span>
                                                     </div>
                                                 </div>
-                                                <div class="col">
+                                                <div class="row">
                                                     <div class="cell panel">
                                                         <div class="gradient header">
                                                             Header
@@ -334,7 +334,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="col">
+                                                <div class="row">
                                                     <div class="cell">
                                                         <table class="datasheet">
                                                             <thead>
@@ -415,7 +415,7 @@
                         <a href="https://twitter.com/cascadecss"><span class="icon icon-32 icon-twitter"></span></a>
                         <a href="http://www.facebook.com/cascadeframework"><span class="icon icon-32 icon-facebook-sign"></span></a>
                         <a href="https://github.com/CascadeFramework"><span class="icon icon-32 icon-github"></span></a>
-                        <div class="col">
+                        <div class="row">
                             &#169; 2013, <a href="https://twitter.com/johnslegers">John Slegers</a>
                         </div>
                     </div>
