--- a/typography-form.html
+++ b/typography-form.html
@@ -25,13 +25,13 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col sizefill sitemenu">
-                        <div class="col sizefit mobile-sizefit">
+                    <div class="row sizefill sitemenu">
+                        <div class="row sizefit mobile-sizefit">
                             <div class="cell">
                                 <a href="index.html" class="logo"></a>
                             </div>
                         </div>
-                        <div class="col sizefill mobile-sizefill">
+                        <div class="row sizefill mobile-sizefill">
                             <div class="cell">
                                 <ul class="nav">
                                     <li><a href="grid.html">Grid</a></li>
@@ -44,9 +44,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="row">
                     <div class="cell">
-                        <div class="col">
+                        <div class="row">
                             <div class="cell">
                                 <div class="page-header">
                                     <h1>Typography <small>documentation</small></h1>
@@ -55,7 +55,7 @@
                         </div>
 
 
-                        <div class="col size1of4">
+                        <div class="row size1of4">
                             <div class="cell menu">
                                 <span class="tiny">Typography types</span>
                                 <ul class="left nav links">
@@ -65,7 +65,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col sizefill">
+                        <div class="row sizefill">
 
 
 
@@ -77,7 +77,7 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Forms</h2>
                                     <p>Cascade framework normalises form elements without forcing you into a specific layout.<br>
@@ -85,44 +85,44 @@
                                         to build a simple responsive form with the same ease as building your overall design as shown in the example below.</p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
-                                            <div class="col">
+                                            <div class="row">
                                                 <div class="cell">
                                                     <form>
-                                                        <div class="col">
-                                                            <div class="col size1of4">
+                                                        <div class="row">
+                                                            <div class="row size1of4">
                                                                 <div class="cell">
                                                                     <label for="firstname">First name</label>
                                                                 </div>
                                                             </div>
-                                                            <div class="col sizefill">
+                                                            <div class="row sizefill">
                                                                 <div class="cell">
                                                                     <input type="text" id="firstname" placeholder="Your first name" class="text">
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col">
-                                                            <div class="col size1of4">
+                                                        <div class="row">
+                                                            <div class="row size1of4">
                                                                 <div class="cell">
                                                                     <label for="lastname">Last name</label>
                                                                 </div>
                                                             </div>
-                                                            <div class="col sizefill">
+                                                            <div class="row sizefill">
                                                                 <div class="cell">
                                                                     <input type="text" id="lastname" placeholder="Your last name" class="text">
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col">
-                                                            <div class="col size1of4">
+                                                        <div class="row">
+                                                            <div class="row size1of4">
                                                                 <div class="cell">
                                                                     <label for="country">Country</label>
                                                                 </div>
                                                             </div>
-                                                            <div class="col sizefill">
+                                                            <div class="row sizefill">
                                                                 <div class="cell">
                                                                     <select id="country">
                                                                         <option>Canada</option>
@@ -132,13 +132,13 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col">
-                                                            <div class="col size1of4">
+                                                        <div class="row">
+                                                            <div class="row size1of4">
                                                                 <div class="cell">
                                                                     <label for="male">Gender</label>
                                                                 </div>
                                                             </div>
-                                                            <div class="col sizefill">
+                                                            <div class="row sizefill">
                                                                 <div class="cell">
                                                                     <input name="gender" id="male" type="radio" class="radio">
                                                                     <label for="male">Man</label>
@@ -147,25 +147,25 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col">
-                                                            <div class="col size1of4">
+                                                        <div class="row">
+                                                            <div class="row size1of4">
                                                                 <div class="cell">
                                                                     <label for="occupation">Occupation</label>
                                                                 </div>
                                                             </div>
-                                                            <div class="col sizefill">
+                                                            <div class="row sizefill">
                                                                 <div class="cell">
                                                                     <input type="text" id="occupation" placeholder="Your occupation" class="text">
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col">
-                                                            <div class="col size1of4">
+                                                        <div class="row">
+                                                            <div class="row size1of4">
                                                                 <div class="cell">
                                                                     <label for="webdev">Hobbies</label>
                                                                 </div>
                                                             </div>
-                                                            <div class="col sizefill">
+                                                            <div class="row sizefill">
                                                                 <div class="cell">
                                                                     <input name="hobbies" id="webdev" type="checkbox" class="checkbox">
                                                                     <label for="webdev">Web development</label>
@@ -176,22 +176,22 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col">
-                                                            <div class="col size1of4">
+                                                        <div class="row">
+                                                            <div class="row size1of4">
                                                                 <div class="cell">
                                                                     <label for="comment">Comment</label>
                                                                 </div>
                                                             </div>
-                                                            <div class="col sizefill">
+                                                            <div class="row sizefill">
                                                                 <div class="cell">
                                                                     <textarea id="comment"></textarea>
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col">
-                                                            <div class="col size1of4">
+                                                        <div class="row">
+                                                            <div class="row size1of4">
                                                             </div>
-                                                            <div class="col sizefill">
+                                                            <div class="row sizefill">
                                                                 <div class="cell">
                                                                     <button class="button">Submit</button>
                                                                 </div>
@@ -210,18 +210,18 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Buttons</h2>
                                     <p>Cascade framework provides a normalised look for buttons. Regardless of which HTML tag you use, your buttons should look the same.
                                         The example below shows a button made from a button element, a div element, an a element, an input element and a span element.</p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
-                                            <div class="col">
+                                            <div class="row">
                                                 <div class="cell">
                                                     <form>
                                                         <div>
@@ -244,20 +244,20 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Button sets</h2>
                                     <p>Button sets group buttons into a cohesive whole. The example below shows two button sets side by side, which is a common layout for menu bars.</p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
-                                            <div class="col">
+                                            <div class="row">
                                                 <div class="cell">
                                                     <form>
-                                                        <div class="col">
+                                                        <div class="row">
                                                             <div class="cell">
                                                                 <div class="button-group">
                                                                     <div class="button">1</div>
@@ -286,7 +286,7 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Buttons with icons</h2>
                                     <p>The example below illustrates how buttons can be combined with icons. Cascade Framework is packed with FontAwesome, which is a
@@ -294,11 +294,11 @@
                                         behind the framework, these icons are cross-browser and support old IE up to IE6 through the use of CSS expressions.</p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
-                                            <div class="col">
+                                            <div class="row">
                                                 <div class="cell">
                                                     <a class="button icon-button" href="#"><span class="icon icon-repeat"></span> Reload</a>
                                                     <button class="icon-button button"><span class="icon icon-link"></span> Add link</button>
@@ -337,7 +337,7 @@
                         <a href="https://twitter.com/cascadecss"><span class="icon icon-32 icon-twitter"></span></a>
                         <a href="http://www.facebook.com/cascadeframework"><span class="icon icon-32 icon-facebook-sign"></span></a>
                         <a href="https://github.com/CascadeFramework"><span class="icon icon-32 icon-github"></span></a>
-                        <div class="col">
+                        <div class="row">
                             &#169; 2013, <a href="https://twitter.com/johnslegers">John Slegers</a>
                         </div>
                     </div>
