--- a/typography.html
+++ b/typography.html
@@ -25,13 +25,13 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col sizefill sitemenu">
-                        <div class="col sizefit mobile-sizefit">
+                    <div class="row sizefill sitemenu">
+                        <div class="row sizefit mobile-sizefit">
                             <div class="cell">
                                 <a href="index.html" class="logo"></a>
                             </div>
                         </div>
-                        <div class="col sizefill mobile-sizefill">
+                        <div class="row sizefill mobile-sizefill">
                             <div class="cell">
                                 <ul class="nav">
                                     <li><a href="grid.html">Grid</a></li>
@@ -44,9 +44,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="row">
                     <div class="cell">
-                        <div class="col">
+                        <div class="row">
                             <div class="cell">
                                 <div class="page-header">
                                     <h1>Typography <small>documentation</small></h1>
@@ -55,7 +55,7 @@
                         </div>
 
 
-                        <div class="col size1of4">
+                        <div class="row size1of4">
                             <div class="cell menu">
                                 <span class="tiny">Typography types</span>
                                 <ul class="left nav links">
@@ -65,7 +65,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col sizefill">
+                        <div class="row sizefill">
 
 
 
@@ -76,17 +76,17 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Headings</h2>
                                     <p>Herebelow is an example of the different headings</p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
-                                            <div class="col">
+                                            <div class="row">
                                                 <div class="cell">
                                                     <h1>Heading 1</h1>
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -114,27 +114,27 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Inline elements</h2>
                                     <p>Herebelow is an example of inline elements.</p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
-                                            <div class="col">
+                                            <div class="row">
                                                 <div class="cell">
-                                                    <div class="col size1of2 tablet-size1of2">
-                                                        <div class="col size1of2">
+                                                    <div class="row size1of2 tablet-size1of2">
+                                                        <div class="row size1of2">
                                                             <p><abbr title="Cascading Style Sheets">CSS</abbr></p>
                                                             <p><cite>Origin of Species</cite></p>
                                                             <p><code>Code tag</code></p>
                                                             <p><em>Emphasis</em></p>
                                                             <p><mark>Mark text</mark></p>
                                                         </div>
-                                                        <div class="col sizefill mobile-hidden">
+                                                        <div class="row sizefill mobile-hidden">
                                                             <p><code>&lt;abbr&gt;</code></p>
                                                             <p><code>&lt;cite&gt;</code></p>
                                                             <p><code>&lt;code&gt;</code></p>
@@ -142,8 +142,8 @@
                                                             <p><code>&lt;mark&gt;</code></p>
                                                         </div>
                                                     </div>
-                                                    <div class="col sizefill tablet-sizefill">
-                                                        <div class="col size1of2">
+                                                    <div class="row sizefill tablet-sizefill">
+                                                        <div class="row size1of2">
                                                             <p><kbd>Cmd + Shift + i</kbd></p>
                                                             <p><strong>Highlighted text</strong></p>
                                                             <p><b>Bold text</b></p>
@@ -151,7 +151,7 @@
                                                             <p><sup>superscript</sup>&nbsp;</p>
                                                             <p><sub>subscript</sub>&nbsp;</p>
                                                         </div>
-                                                        <div class="col sizefill mobile-hidden">
+                                                        <div class="row sizefill mobile-hidden">
                                                             <p><code>&lt;kbd&gt;</code></p>
                                                             <p><code>&lt;strong&gt;</code></p>
                                                             <p><code>&lt;b&gt;</code></p>
@@ -177,17 +177,17 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Preformatted text</h2>
                                     <p>Most useful for poetry and code</p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
-                                            <div class="col">
+                                            <div class="row">
                                                 <div class="cell">
                                                     <pre>
 
@@ -224,18 +224,18 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Lists</h2>
                                     <p>Default list styles</p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
-                                            <div class="col">
-                                                <div class="col size1of2">
+                                            <div class="row">
+                                                <div class="row size1of2">
                                                     <ul>
                                                         <li>One.</li>
                                                         <li>Two.
@@ -305,17 +305,17 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Quotes</h2>
                                     <p>A very basic quote</p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
-                                            <div class="col">
+                                            <div class="row">
                                                 <div class="cell">
                                                     <blockquote>
                                                         <p>This is a block quotation containing a <em>single</em> paragraph. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
@@ -323,7 +323,7 @@
                                                     </blockquote>	
                                                 </div>
                                             </div>
-                                            <div class="col">
+                                            <div class="row">
                                                 <div class="cell">
                                                     <blockquote>
                                                         <p>This is a block quotation containing a <em>single</em> paragraph. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
@@ -344,17 +344,17 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Definitions</h2>
                                     <p>A very basic definition list</p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
-                                            <div class="col">
+                                            <div class="row">
                                                 <div class="cell">
                                                     <dl>
                                                         <dt>Apple</dt>
@@ -376,17 +376,17 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Figures</h2>
                                     <p>A basic figure with figcaption</p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
-                                            <div class="col">
+                                            <div class="row">
                                                 <div class="cell">
                                                     <figure class="nuremberg">  
                                                         <img src="assets/img/nuremberg/4.png" alt="" /> 
@@ -415,7 +415,7 @@
                         <a href="https://twitter.com/cascadecss"><span class="icon icon-32 icon-twitter"></span></a>
                         <a href="http://www.facebook.com/cascadeframework"><span class="icon icon-32 icon-facebook-sign"></span></a>
                         <a href="https://github.com/CascadeFramework"><span class="icon icon-32 icon-github"></span></a>
-                        <div class="col">
+                        <div class="row">
                             &#169; 2013, <a href="https://twitter.com/johnslegers">John Slegers</a>
                         </div>
                     </div>
