--- a/grid.html
+++ b/grid.html
@@ -68,13 +68,13 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col sizefill sitemenu">
-                        <div class="col sizefit mobile-sizefit">
+                    <div class="row sizefill sitemenu">
+                        <div class="row sizefit mobile-sizefit">
                             <div class="cell">
                                 <a href="index.html" class="logo"></a>
                             </div>
                         </div>
-                        <div class="col sizefill mobile-sizefill">
+                        <div class="row sizefill mobile-sizefill">
                             <div class="cell">
                                 <ul class="nav">
                                     <li class="active"><a href="grid.html">Grid</a></li>
@@ -87,16 +87,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="row">
                     <div class="cell">
-                        <div class="col">
+                        <div class="row">
                             <div class="cell">
                                 <div class="page-header">
                                     <h1>Grid <small>documentation</small></h1>
                                 </div>
                             </div>
                         </div>
-                        <div class="col size1of4">
+                        <div class="row size1of4">
                             <div class="cell menu">
                                 <span class="tiny">Grid types</span>
                                 <ul class="left nav links">
@@ -106,7 +106,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col sizefill">
+                        <div class="row sizefill">
 
 
 
@@ -119,7 +119,7 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Semantic grid elements</h2>
                                     <p>
@@ -139,7 +139,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell layout-demo">
@@ -223,7 +223,7 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Refining your layout</h2>
                                     <p>
@@ -248,11 +248,11 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
-                                            <div class="col">
+                                            <div class="row">
                                                 <div class="cell">
                                                     <header class="pageheader">
                                                         <section>
@@ -349,7 +349,7 @@
 
 
 
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <h2>Site header and footer</h2>
                                     <p>
@@ -357,11 +357,11 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
-                                            <div class="col">
+                                            <div class="row">
                                                 <div class="cell">
                                                     <header class="pageheader site-header">
                                                         <section>
@@ -473,7 +473,7 @@
                         <a href="https://twitter.com/cascadecss"><span class="icon icon-32 icon-twitter"></span></a>
                         <a href="http://www.facebook.com/cascadeframework"><span class="icon icon-32 icon-facebook-sign"></span></a>
                         <a href="https://github.com/CascadeFramework"><span class="icon icon-32 icon-github"></span></a>
-                        <div class="col">
+                        <div class="row">
                             &#169; 2013, <a href="https://twitter.com/johnslegers">John Slegers</a>
                         </div>
                     </div>
