--- a/license.html
+++ b/license.html
@@ -25,13 +25,13 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col sizefill sitemenu">
-                        <div class="col sizefit mobile-sizefit">
+                    <div class="row sizefill sitemenu">
+                        <div class="row sizefit mobile-sizefit">
                             <div class="cell">
                                 <a href="index.html" class="logo"></a>
                             </div>
                         </div>
-                        <div class="col sizefill mobile-sizefill">
+                        <div class="row sizefill mobile-sizefill">
                             <div class="cell">
                                 <ul class="nav">
                                     <li class="active"><a href="grid.html">Grid</a></li>
@@ -44,9 +44,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="row">
                     <div class="cell">
-                        <div class="col">
+                        <div class="row">
                             <div class="cell">
                                 <div class="page-header">
                                     <h1>Cascade Framework <small>license</small></h1>
@@ -62,7 +62,7 @@
 
 
 
-                        <div class="col">
+                        <div class="row">
                             <div class="cell">
                                 <p><i>Copyright (C) 2013 John Slegers</i></p>
 
@@ -100,7 +100,7 @@
                         <a href="https://twitter.com/cascadecss"><span class="icon icon-32 icon-twitter"></span></a>
                         <a href="http://www.facebook.com/cascadeframework"><span class="icon icon-32 icon-facebook-sign"></span></a>
                         <a href="https://github.com/CascadeFramework"><span class="icon icon-32 icon-github"></span></a>
-                        <div class="col">
+                        <div class="row">
                             &#169; 2013, <a href="https://twitter.com/johnslegers">John Slegers</a>
                         </div>
                     </div>
