--- a/template-centered-content.html
+++ b/template-centered-content.html
@@ -17,14 +17,14 @@
     </head>
     <body>
         <div class="site-header">
-            <div class="col sizefit mobile-sizefit">
+            <div class="row sizefit mobile-sizefit">
                 <div class="cell">
                     <a href="#" class="logo"></a>
                 </div>
             </div>
-            <div class="col sizefill mobile-sizefill">
+            <div class="row sizefill mobile-sizefill">
                 <div class="cell">
-                    <ul class="col nav">
+                    <ul class="row nav">
                         <li class="active"><a href="#">Item one</a></li>
                         <li><a href="#">Item two</a></li>
                         <li><a href="#">Item three</a></li>
@@ -37,21 +37,21 @@
         <div class="site-body centered-content">
             <div class="site-center">
                 <div class="cell">
-                    <div class="col">
+                    <div class="row">
                         <div class="cell">
                             <div class="page-header">
                                 <h1>Centered content</h1>
                             </div>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="col content">
-                            <div class="col">
+                    <div class="row">
+                        <div class="row content">
+                            <div class="row">
                                 <div class="cell">
                                     <div class="template-header">
                                         <h2>Lorem ipsum</h2>
                                     </div>
-                                    <div class="col leuven">
+                                    <div class="row leuven">
                                         <div class="cell panel">
                                             <div class="body">
                                                 <div class="cell">
@@ -78,17 +78,17 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <hr />
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell">
                                     <div class="template-header">
                                         <h2>Vestibulum ante</h2>
                                     </div>
-                                    <div class="col leuven">
+                                    <div class="row leuven">
                                         <div class="cell panel">
                                             <div class="body">
                                                 <div class="cell">
@@ -125,36 +125,36 @@
 
 
                         </div>
-                        <div class="col sizefill">
-                            <div class="col">
+                        <div class="row sizefill">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="header">
                                         Login
                                     </div>
                                     <div class="body">
                                         <div class="cell">
-                                            <div class="col">
+                                            <div class="row">
                                                 <div class="cell">
                                                     <form>
-                                                        <div class="col">
-                                                            <div class="col size1of2">
+                                                        <div class="row">
+                                                            <div class="row size1of2">
                                                                 <div class="cell">
                                                                     <label for="login">Login:</label>
                                                                 </div>
                                                             </div>
-                                                            <div class="col sizefill">
+                                                            <div class="row sizefill">
                                                                 <div class="cell">
                                                                     <input type="text" id="login" class="text">
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="col">
-                                                            <div class="col size1of2">
+                                                        <div class="row">
+                                                            <div class="row size1of2">
                                                                 <div class="cell">
                                                                     <label for="password">Password:</label>
                                                                 </div>
                                                             </div>
-                                                            <div class="col sizefill">
+                                                            <div class="row sizefill">
                                                                 <div class="cell">
                                                                     <input type="password" id="password" class="text">
                                                                 </div>
@@ -167,7 +167,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="row">
                                 <div class="cell panel">
                                     <div class="header">
                                         Links
@@ -192,12 +192,12 @@
         </div>
         <div class="site-center">
             <div class="site-footer">
-                <div class="col sizefit">
+                <div class="row sizefit">
                     <div class="cell">
                         <a href="#" class="powered-by"></a>
                     </div>
                 </div>
-                <div class="col sizefill">
+                <div class="row sizefill">
                     <div class="cell pipes">
                         <ul class="nav">
                             <li id="active"><a href="#">Item one</a></li>
