--- a/template-centered-page.html
+++ b/template-centered-page.html
@@ -40,14 +40,14 @@
     <body>
         <div class="site-center">
             <div class="site-header">
-                <div class="col sizefit mobile-sizefit">
+                <div class="row sizefit mobile-sizefit">
                     <div class="cell">
                         <a href="#" class="logo"></a>
                     </div>
                 </div>
-                <div class="col sizefill mobile-sizefill">
+                <div class="row sizefill mobile-sizefill">
                     <div class="cell">
-                        <ul class="col nav">
+                        <ul class="row nav">
                             <li class="active"><a href="#">Item one</a></li>
                             <li><a href="#">Item two</a></li>
                             <li><a href="#">Item three</a></li>
@@ -59,14 +59,14 @@
             </div>
             <div class="site-body">
                 <div class="cell">
-                    <div class="col">
+                    <div class="row">
                         <div class="cell">
                             <div class="page-header">
                                 <h1>Centered</h1>
                             </div>
                         </div>
                     </div>
-                    <div class="col size1of4">
+                    <div class="row size1of4">
                         <div class="cell menu">
                             <span class="tiny">Test test</span>
                             <ul class="left nav links">
@@ -78,13 +78,13 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col sizefill">
-                        <div class="col">
+                    <div class="row sizefill">
+                        <div class="row">
                             <div class="cell">
                                 <div class="template-header">
                                     <h2>Lorem ipsum</h2>
                                 </div>
-                                <div class="col leuven">
+                                <div class="row leuven">
                                     <div class="cell panel">
                                         <div class="body">
                                             <div class="cell">
@@ -111,17 +111,17 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="row">
                             <div class="cell">
                                 <hr />
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="row">
                             <div class="cell">
                                 <div class="template-header">
                                     <h2>Vestibulum ante</h2>
                                 </div>
-                                <div class="col leuven">
+                                <div class="row leuven">
                                     <div class="cell panel">
                                         <div class="body">
                                             <div class="cell">
@@ -165,12 +165,12 @@
             </div>
             <div class="site-footer">
                 <div class="site-center">
-                    <div class="col sizefit">
+                    <div class="row sizefit">
                         <div class="cell">
                             <a href="#" class="powered-by"></a>
                         </div>
                     </div>
-                    <div class="col sizefill">
+                    <div class="row sizefill">
                         <div class="cell pipes">
                             <ul class="nav">
                                 <li id="active"><a href="#">Item one</a></li>
