--- a/template-centered-panel-with-header.html
+++ b/template-centered-panel-with-header.html
@@ -28,14 +28,14 @@
         <div class="site-center">
             <div class="site-body">
                 <div class="site-header">
-                    <div class="col sizefit mobile-sizefit">
+                    <div class="row sizefit mobile-sizefit">
                         <div class="cell">
                             <a href="#" class="logo"></a>
                         </div>
                     </div>
-                    <div class="col sizefill mobile-sizefill">
+                    <div class="row sizefill mobile-sizefill">
                         <div class="cell">
-                            <ul class="col nav">
+                            <ul class="row nav">
                                 <li class="active"><a href="#">Item one</a></li>
                                 <li><a href="#">Item two</a></li>
                                 <li><a href="#">Item three</a></li>
@@ -46,14 +46,14 @@
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="row">
                     <div class="cell">
                         <div class="page-header">
                             <h1>Centered panel with header</h1>
                         </div>
                     </div>
                 </div>
-                <div class="col size1of4">
+                <div class="row size1of4">
                     <div class="cell menu">
                         <span class="tiny">Test test</span>
                         <ul class="left nav links">
@@ -65,13 +65,13 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col sizefill">
-                    <div class="col">
+                <div class="row sizefill">
+                    <div class="row">
                         <div class="cell">
                             <div class="template-header">
                                 <h2>Lorem ipsum</h2>
                             </div>
-                            <div class="col leuven">
+                            <div class="row leuven">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
@@ -98,17 +98,17 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="row">
                         <div class="cell">
                             <hr />
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="row">
                         <div class="cell">
                             <div class="template-header">
                                 <h2>Vestibulum ante</h2>
                             </div>
-                            <div class="col leuven">
+                            <div class="row leuven">
                                 <div class="cell panel">
                                     <div class="body">
                                         <div class="cell">
@@ -149,12 +149,12 @@
                 </div>
             </div>
             <div class="site-footer">
-                <div class="col sizefit">
+                <div class="row sizefit">
                     <div class="cell">
                         <a href="#" class="powered-by"></a>
                     </div>
                 </div>
-                <div class="col sizefill">
+                <div class="row sizefill">
                     <div class="cell pipes">
                         <ul class="nav">
                             <li id="active"><a href="#">Item one</a></li>
